erDiagram
    users ||--o{ penyewa : "user_id (1:1 Aktif / 1:N Historis)"
    kamar ||--o{ penyewa : "kamar_id (1:N)"
    
    users {
        unsigned_bigint id PK
        string nama "varchar(100)"
        string email "varchar(150)"
        string active_email "varchar(150) VIRTUAL, UK"
        string password "varchar(255)"
        string no_hp "varchar(50), Nullable"
        string active_no_hp "varchar(20) VIRTUAL, UK"
        string nik "varchar(50), Nullable"
        string active_nik "varchar(20) VIRTUAL, UK"
        string nama_wali "varchar(100), Nullable"
        string no_wali "varchar(20), Nullable"
        enum role "admin, penyewa"
        string foto "varchar(255), Nullable"
        tinyint is_active "Default 1"
        boolean require_password_change "Default false"
        timestamp deleted_at "Nullable, Index"
    }
    penyewa {
        unsigned_bigint id PK
        unsigned_bigint user_id FK "1:1 Aktif / 1:N Historis"
        unsigned_bigint kamar_id FK
        decimal harga_sewa "12,2 (Immutable snapshot)"
        string nik "varchar(50)"
        date tanggal_masuk
        date tanggal_keluar "Nullable"
        date tanggal_keluar_seharusnya "Nullable"
        enum status "aktif, nonaktif"
        tinyint tanggal_billing "Default 1"
        enum tipe_sewa "harian, mingguan, bulanan"
        tinyint durasi "Default 1"
        decimal deposit "12,2, Default 0"
        string no_wali "varchar(20)"
        string nama_wali "varchar(100)"
        timestamp deleted_at "Nullable, Index"
    }
    kamar {
        unsigned_bigint id PK
        string nomor_kamar "varchar(50)"
        string active_nomor_kamar "varchar(50) VIRTUAL, UK"
        tinyint lantai "Default 1"
        enum tipe "standar, deluxe, vip"
        decimal luas_m2 "5,2"
        decimal harga_bulan "12,2"
        enum status "tersedia, terisi, maintenance"
        timestamp deleted_at "Nullable, Index"
    }
